tests/purs/failing/TypeQualification3.out
Error found:
in module [33mMain[0m
at tests/purs/failing/TypeQualification3.purs:10:6 - 10:13 (line 10, column 6 - line 10, column 13)

  Could not match type
  [33m        [0m
  [33m  String[0m
  [33m        [0m
  with type
  [33m     [0m
  [33m  L.Z[0m
  [33m     [0m

while checking that type [33mString[0m
  is at least as general as type [33mZ[0m
while checking that expression [33m"wrong"[0m
  has type [33mZ[0m
in value declaration [33mx3[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

